# qemu-xnu

./: .gitignore
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  task.yaml
.github/workflows/: build-container.yaml
hw/arm/: meson.build
hw/arm/apple/: apple_a9.c  apple_dart.c  apple_sart.c  apple_sep.c  meson.build  s8000.c  t8030.c  t8030_cpu.c  t8030_gxf.h  xnu.c  xnu_dtb.c  xnu_kpf.c  xnu_mem.c  xnu_pf.c
hw/block/: apple_ans.c
hw/gpio/: apple_gpio.c
hw/i2c/: apple_hw_i2c.c  apple_i2c.c
hw/intc/: apple_aic.c
hw/misc/: apple_aes.c  apple_smc.c  apple_spmi_pmu.c
hw/spmi/: apple_spmi.c
hw/ssi/: apple_spi.c
hw/usb/: apple_otg.c
hw/watchdog/: apple_wdt.c
include/: qemu-common.h
include/hw/arm/apple/: apple_a9.h  apple_dart.h  apple_sart.h  apple_sep.h  s8000.h  t8030.h  t8030_cpu.h  xnu.h  xnu_pf.h
include/hw/block/: apple_ans.h
include/hw/gpio/: apple_gpio.h
include/hw/i2c/: apple_hw_i2c.h  apple_i2c.h
include/hw/intc/: apple_aic.h
include/hw/misc/: apple_aes.h  apple_smc.h
include/hw/spmi/: apple_spmi.h  apple_spmi_pmu.h
include/hw/ssi/: apple_spi.h
include/hw/usb/: apple_otg.h
include/hw/watchdog/: apple_wdt.h
include/qemu/: osdep.h
tests/docker/dockerfiles/: apple-silicon.docker
